
import("//build/config/compiler/compiler.gni")
import("//build/config/features.gni")
import("//build/config/sanitizers/sanitizers.gni")
import("//build/config/ui.gni")
import("//build/util/generate_wrapper.gni")


group("examples") {
  testonly = true
  deps = [
    ":strings_example",
    ":process_cpu_example",
    ":thread_model_example",
  ]
}

executable("strings_example") {
  testonly = true

  sources = [
    "strings/main.cc",
  ]

  deps = [
    "//base:base",
    "//base/test:test_support",
  ]
}

executable("process_cpu_example") {
  testonly = true

  sources = [
    "process/process_cpu_example.cc",
  ]

  deps = [
    "//base:base",
    "//base/test:test_support",
  ]
}

executable("thread_model_example") {
  testonly = true

  sources = [
    "thread/thread_model_example.cc",
  ]

  deps = [
    "//base:base",
    "//base/test:test_support",
  ]
}